configurar entorno de prueba y cargar datos

--- a/ejercicios-semanales/compose.yml
+++ b/ejercicios-semanales/compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: practica-db
     image: mysql:9.3
     volumes:
-      - ./db_mysql:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports: 
       - 3306:3306
     environment:
